# uav_program_201905

devel/: .catkin  .rosinstall  setup.sh
devel/lib/filter_kalman/: filter_kalman
devel/lib/imu_tf/: imu_tf_node
devel/lib/pkgconfig/: filter_kalman.pc  imu_tf.pc
devel/share/filter_kalman/cmake/: filter_kalmanConfig.cmake
devel/share/imu_tf/cmake/: imu_tfConfig.cmake
src/filter_kalman/: CMakeLists.txt  readme  readme.txt
src/filter_kalman/include/: filter_kalman.h  filter_kalman.h~  out_map.txt~
src/filter_kalman/include/数据分析/: estimatexy.xls  estimatexy2.xls
src/filter_kalman/launch/: filter_kalman.launch~  filter_kalman_estimatexy.launch~  filter_kalman_jcd2018.launch~  readme.txt  readme.txt~  uav_program_201905.launch
src/filter_kalman/src/: filter_kalman.cpp  filter_kalman_node.cpp
src/filter_kalman/urdf/: uav_laser_tf.urdf
src/imu_tf/: CMakeLists.txt
src/imu_tf/include/: imu_tf.h
src/imu_tf/launch/: imu_tf.launch  imu_tf.launch~
src/imu_tf/src/: imu_tf.cpp  imu_tf_node.cpp
src/launch/: start.launch
src/urdf/: uav_laser_tf.urdf
usage/: 1_velodyne.sh  2_mavros.sh  3_imu.sh  4_uav_program.sh  UAV_program_201905.txt  postion_data.txt
